--- a/src/app/body/left/left.component.html
+++ b/src/app/body/left/left.component.html
@@ -1,7 +1,8 @@
 <div class="left-container">
     <h3 class="title-name">Alejandro Huerta</h3>
     <span class="subheader"><h2>Full Stack javascript Developer Engineer JavaScript, Node.js Angular, React, MongoDB, Redux, Firebase, HTML5 and CSS3</h2></span>
-    <img src="https://avatars0.githubusercontent.com/u/14314562?s=400&u=9203a42d97fd5a0e9ea40108e22509a8f7c342a9&v=4" alt="">
+    <a href="https://s120.photobucket.com/user/metalozaru/media/14314562.jpeg.html" target="_blank">
+        <img src="https://i120.photobucket.com/albums/o195/metalozaru/14314562.jpeg" border="0" alt=" photo 14314562.jpeg" /></a>
     <br>
     <a href='https://github.com/ahuertam'><i class="fa fa-github fa-2x fa-fw"></i></a>
     <a href='https://www.linkedin.com/in/alejandrohuertaengineer'><i class="fa fa-linkedin fa-2x fa-fw"></i></a>
